kind/minio-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-gateway-ingress
  namespace: minio-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: s4v3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-gateway
                port:
                  number: 9090
